(https://fonts.gstatic.com/s/merriweather/v32/u-4D0qyriQwlOrhSvowK_l5UcA6zuSYEqOzpPe3HOZJ5eX1WtLaQwmYiScCmDxhtNOKl8yDr3icaEF31GvU.woff2) format('woff2');   unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;

--- a/oraculo.html..html
+++ b/oraculo.html..html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Oráculo do Templo Interno</title>
     <style>
-        body {
+        body { font-family: 'Merriweather', serif;
+      background-color: #121212;
+      color: #ddd;
+      padding: 20px;
             background-color: #1e1e1e;
             color: #f2f2f2;
             font-family: 'Georgia', serif;
